[tool.poetry]
name = "lambda-cloud-python"
version = "0.1.0"
description = "Python client for the Lambda Labs Cloud API"
authors = ["Koen Dercksen <mail@koendercksen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
